<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/entry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry"
            />

        <EditText
            android:id="@+id/main_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/main_course"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:id="@+id/cheese"
                android:text="@string/cheese"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <CheckBox
                android:id="@+id/fruit"
                android:text="@string/fruit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <RadioButton
                android:id="@+id/noon"
                android:text="@string/noon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
            <RadioButton
                android:id="@+id/evening"
                android:text="@string/evening"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </RadioGroup>




        <Button
            android:id="@+id/validate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate"
            />
        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>